# py-slack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/backlight_slack/: __init__.py  api.py  blocks.py  config.py  webhook.py
tests/: test_blocks.py
