[project]
name = "backlight-slack"
version = "0.2.0"
description = "Slack notification helpers for Backlight customer backends"
requires-python = ">=3.11"
dependencies = [
    "slack_sdk>=3.27.0",
    "pydantic>=2.0",
]
authors = [{ name = "Backlight AI" }]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backlight_slack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "slack_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
